--- a/app/src/main/res/layout/list_mahasiswa.xml
+++ b/app/src/main/res/layout/list_mahasiswa.xml
@@ -12,6 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="NO"
+            android:layout_marginEnd="10dp"
+            android:id="@+id/noTextView"/>
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
