update add mahasiswa

--- a/app/src/main/res/layout/activity_add_mahasiswa.xml
+++ b/app/src/main/res/layout/activity_add_mahasiswa.xml
@@ -109,7 +109,7 @@
             android:text="Tahun Masuk" />
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
             android:id="@+id/tahunMasukEditText" />
